--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "express-basic-auth": "^1.2.1",
+    "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.13.1",
@@ -47,6 +49,7 @@
     "@swc/core": "^1.4.0",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.11.16",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
