--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "migration:revert": "npm run typeorm -- -d ./src/commons/TypeORMConfig.ts migration:revert"
   },
   "dependencies": {
+    "@leninlb/nestjs-html-to-pdf": "^1.0.1",
     "@nestjs/common": "^10.4.1",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.3.2",
@@ -36,6 +37,7 @@
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pdfkit": "^0.16.0",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
@@ -51,6 +53,7 @@
     "@types/jest": "^29.5.12",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.11.16",
+    "@types/pdfkit": "^0.13.8",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
